fix letter spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,7 +33,7 @@ body.has-bg{
 }
 
 .is-more-spaced{
-	letter-spacing: 1.4px;
+	letter-spacing: 1px;
 }
 
 .has-underline{
